# ternary-fitness

./: AGENT.md  Cargo.toml  README.md
docs/: FUTURE-INTEGRATION.md
memory/: JOURNAL.md
src/: entropy.rs  environment.rs  evaluator.rs  exhaustive.rs  landscape.rs  lib.rs  pareto.rs  strategy.rs
